# graft-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: 1-pending-compile-fixes.md  2-next-phase-decision.md  3-phase2-where-system.md  4-phase3-select-order-group.md  5-phase4-security-policy.md  SQLQueryBuilder-Design-Memo.md  roadmap.md
graft/: Cargo.toml
graft-core/: Cargo.toml
graft-core/src/: backend.rs  builder.rs  exec.rs  lib.rs  param.rs  result.rs  types.rs
graft-core/src/backends/: mariadb.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
graft-derive/: Cargo.toml
graft-derive/src/: lib.rs
graft/src/: lib.rs
